// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input> that renders an input field should add classes when props are changed 1`] = `
<input
  className="Input Input--context_danger Input--size_large Input--isBlock"
  data-lpignore={true}
  disabled={true}
  type="text"
/>
`;

exports[`<Input> that renders an input field should render default input correctly 1`] = `
<input
  className="Input"
  data-lpignore={true}
  disabled={false}
  type="text"
  value="Some value"
/>
`;
